*SVN*

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Remove duplicate fixture entry in comments.yml. Closes #4923. [Blair Zajac <blair@orcaware.com>]

* Update FrontBase adapter to check binding version. Closes #4920. [mlaster@metavillage.com] 

* New Frontbase connections don't start in auto-commit mode. Closes #4922. [mlaster@metavillage.com]

* When grouping, use the appropriate option key. [Marcel Molina Jr.]

* Only modify the sequence name in the FrontBase adapter if the FrontBase adapter is actually being used. [Marcel Molina Jr.]

* Add support for FrontBase (http://www.frontbase.com/) with a new adapter thanks to the hard work of one Mike Laster. Closes #4093. [mlaster@metavillage.com]

* Add warning about the proper way to validate the presence of a foreign key. Closes #4147. [Francois Beausoleil <francois.beausoleil@gmail.com>]

* Fix syntax error in documentation. Closes #4679. [mislav@nippur.irb.hr] 

* Add Oracle support for CLOB inserts. Closes #4748. [schoenm@earthlink.net sandra.metz@duke.edu] 

* Various fixes for sqlserver_adapter (odbc statement finishing, ado schema dumper, drop index). Closes #4831. [kajism@yahoo.com]

* Add support for :order option to with_scope. Closes #3887. [eric.daspet@survol.net]

* Prettify output of schema_dumper by making things line up. Closes #4241 [Caio  Chassot <caio@v2studio.com>]

* Make build_postgresql_databases task make databases owned by the postgres user. Closes #4790. [mlaster@metavillage.com]

* Sybase Adapter type conversion cleanup. Closes #4736. [dev@metacasa.net]

* Fix bug where calculations with long alias names return null. [Rick]

* Raise error when trying to add to a has_many :through association.  Use the Join Model instead. [Rick]

    @post.tags << @tag                  # BAD
    @post.taggings.create(:tag => @tag) # GOOD
